tests/snapshots/snapshots__show_agent.snap
---
source: tests/snapshots.rs
expression: rendered
---
Langfuse Semantic Layer
id:        f4eea6d2-d2d3-41ad-b290-824445295a15
source:    agent
workspace: /Users/demo/project-x
model:     claude-4.5-sonnet
created:   2025-09-04 15:33 UTC
updated:   2025-09-04 16:33 UTC
messages:  4
tokens:    ~41 (estimate)

[user (Thursday, Sep 4, 2025, 9:33 AM (UTC-6))]
Design a semantic layer for Langfuse traces.

[assistant]
Let me look at the trace schema first.

[user]
Keep it read-only.

[assistant]
Here is the plan:
1. Model traces as facts.
2. Expose metrics.
