tests/snapshots/snapshots__show_agent_hidden.snap
---
source: tests/snapshots.rs
expression: "ui::render_show(&session, messages, hidden, false)"
---
Langfuse Semantic Layer
id:        f4eea6d2-d2d3-41ad-b290-824445295a15
source:    agent
workspace: /Users/demo/project-x
model:     claude-4.5-sonnet
created:   2025-09-04 15:33
updated:   2025-09-04 16:33
messages:  4

2 earlier message(s) omitted. Use --limit N or --all to see more.

[user]
Keep it read-only.

[assistant]
Here is the plan:
1. Model traces as facts.
2. Expose metrics.
