tests/snapshots/snapshots__show_ide.snap
---
source: tests/snapshots.rs
expression: rendered
---
Dynamic table proposal
id:        c0ffee00-0000-4000-8000-000000000001
source:    ide
created:   2025-09-06 23:06 UTC
updated:   2025-09-07 00:06 UTC
messages:  3

[user (2025-09-06 23:06 UTC)]
Replace this view with a dynamic table.

[assistant (2025-09-06 23:07 UTC)]
Here is a plan.

[assistant]
Use this component:

```tsx
export function Table() {
  return null;
}
```
