tests/snapshots/snapshots__show_untitled.snap
---
source: tests/snapshots.rs
expression: rendered
---
Untitled
id:        e1e10000-5555-4666-8777-888899990000
source:    ide
created:   2025-09-07 13:00 UTC
updated:   2025-09-07 13:00 UTC
messages:  0
tokens:    ~0 (estimate)
